# prod-second-2025

./: .gitignore  README.md
solution/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
solution/app/: config.py  dao.py  database.py  exceptions.py  main.py  utils.py
solution/app/business/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
solution/app/promo/: dao.py  models.py  schemas.py  service.py  utils.py
solution/app/user/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py
solution/migrations/: env.py
solution/migrations/versions/: 2f1db6f77f8c_init.py  e20741c44538_new.py
